# dogcalc

./: .gitignore  .gitmodules  ButtonGrid.gd  ButtonGrid.gd.uid  CMakeLists.txt  InputsManagerSignals.gd  InputsManagerSignals.gd.uid  InputsManager_old.gd  InputsManager_old.gd.uid  README.md  SConstruct  ValidateLineEdit.gd  ValidateLineEdit.gd.uid  build_godot_cpp.sh  button_script.gd  button_script.gd.uid  icon.png.import  libdogcalc.gdextension  libdogcalc.gdextension.uid  main.glade~  project.godot  settings.gd  settings.gd.uid  v_box_container.tscn
dogcalc_ext/: inputs_manager.cpp  inputs_manager.h  register_types.cpp  register_types.h  settings.h
src/: application.cpp  application.h  main.cpp
